infra/k8s/prod/ingress/no-tls/ingress-realestateify.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-estatetify
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: estatetify.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: public-service
              servicePort: 80

          # - path: /manage?(.*)
          #   backend:
          #     serviceName: mgt-service
          #     servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: re-ingress-service-estatetify
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers: "4 256k"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "256k"
    nginx.ingress.kubernetes.io/client-header-buffer-size: "64k"
    nginx.ingress.kubernetes.io/http2-max-field-size: "16k"
    nginx.ingress.kubernetes.io/http2-max-header-size: "128k"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "8 64k"
spec:
  rules:
    - host: identity.estatetify.com
      http:
        paths:
          - backend:
              serviceName: ids-service
              servicePort: 80
    - host: api.estatetify.com
      http:
        paths:
          - backend:
              serviceName: api-service
              servicePort: 80
